--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"expo": "^34.0.1",
+		"expo-google-app-auth": "^6.0.0",
 		"expo-permissions": "^6.0.0",
 		"moment": "^2.24.0",
 		"react": "16.8.3",
@@ -20,7 +21,8 @@
 		"react-navigation": "^3.11.1"
 	},
 	"devDependencies": {
-		"babel-preset-expo": "^6.0.0"
+		"babel-preset-expo": "^6.0.0",
+		"react-native-dotenv": "^0.2.0"
 	},
 	"private": true
 }
